syntax = "proto3";

package bigstar.customer;

option go_package ="github.com/dtherhtun/Learning-go/ops/proto.cc/go/customer";

import "schemas/customer/message.proto";

service CustomerService {
  rpc Signin(SigninRequest) returns (SigninResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}