syntax = "proto3";

package bigstar.customer;

option go_package ="github.com/dtherhtun/Learning-go/ops/proto/go/customer";

import "header/header.proto";

message Customer {
  int32 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

message SigninRequest {
  Header header = 1;
  Customer customer = 2;
}

message SigninResponse {
  Header header = 1;
  Customer customer = 2;
}

message LoginRequest {
  Header header = 1;
  Customer customer = 2;
}

message LoginResponse {
  Header header = 1;
  Customer customer = 2;
}